# serializer version: 1
# name: test_create_valid
  dict({
    'id': 4,
    'image_url': 'https://test-artist-4-image.com',
    'name': 'test-artist-four',
    'rating': 4,
    'scores': list([
    ]),
    'spotify_url': 'https://test-artist-4.com',
  })
# ---
# name: test_delete_valid
  'OK'
# ---
# name: test_list_valid
  dict({
    'count': 2,
    'next': None,
    'previous': None,
    'results': list([
      dict({
        'id': 2,
        'image_url': 'https://test-artist-2-image.com',
        'name': 'test-artist-two',
        'rating': 4,
        'scores': list([
          dict({
            'category': 'genre',
            'id': 2,
            'metric': 'test-genre-2',
            'type': 'value',
            'value': 4,
          }),
          dict({
            'category': 'genre',
            'id': 4,
            'metric': 'test-genre-1',
            'type': 'value',
            'value': 3,
          }),
        ]),
        'spotify_url': 'https://test-artist-2.com',
      }),
      dict({
        'id': 3,
        'image_url': 'https://test-artist-3-image.com',
        'name': 'test-artist-three',
        'rating': 3,
        'scores': list([
        ]),
        'spotify_url': 'https://test-artist-3.com',
      }),
    ]),
  })
# ---
# name: test_retrieve_valid
  dict({
    'id': 1,
    'image_url': 'https://test-artist-1-image.com',
    'name': 'test-artist-one',
    'rating': 5,
    'scores': list([
      dict({
        'category': 'genre',
        'id': 1,
        'metric': 'test-genre-1',
        'type': 'value',
        'value': 3,
      }),
      dict({
        'category': 'score',
        'id': 3,
        'metric': 'test-flag-metric',
        'type': 'flag',
        'value': 1,
      }),
    ]),
    'spotify_url': 'https://test-artist-1.com',
  })
# ---
# name: test_update_valid
  dict({
    'id': 1,
    'image_url': 'https://test-artist-1234-image.com',
    'name': 'test-artist-modified',
    'rating': 1,
    'scores': list([
      dict({
        'category': 'genre',
        'id': 1,
        'metric': 'test-genre-1',
        'type': 'value',
        'value': 3,
      }),
      dict({
        'category': 'score',
        'id': 3,
        'metric': 'test-flag-metric',
        'type': 'flag',
        'value': 1,
      }),
    ]),
    'spotify_url': 'https://test-artist-1234.com',
  })
# ---
